# localsend-daemon

./: .gitignore  README.md  deploy.yml  inventory  localsend-daemon.example.toml  pyproject.toml  systemd_pythonapp.j2
localsend_daemon/: config.py  dependencies.py  fingerprint.py  identity.py  info.py  main.py  models.py  peers.py  server.py  tls.py  trust.py
localsend_daemon/discovery/: multicast.py  register.py
localsend_daemon/transfer/: cancel.py  prepare.py  session.py  upload.py
tests/: test_cancel.py  test_info.py  test_prepare.py  test_register.py  test_trust.py  test_upload.py
